--- a/src/css/scannerstyle.css
+++ b/src/css/scannerstyle.css
@@ -1,13 +1,21 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    flex-direction: column;
+html, body {
+    margin: 0;
+    padding: 0;
 }
-
-#resultado{
-    width: 400px;
-    height: 500px;
-    border: 1px solid black;
+.content {
+    text-align: center;
+}
+#img {
+    max-width: 200px;
+    margin: 50px 0;
+}
+.form input {
+    height: 30px;
+}
+.form button {
+    height: 36px;
+    padding: 0 10px;
+    border: none;
+    background: grey;
+    color: white;
 }
