--- a/src/css/petsstyle.css
+++ b/src/css/petsstyle.css
@@ -137,14 +137,6 @@ body{
    color:#27ae60;
 }
 
-@media (max-width:991px){
-
-   html{
-      font-size: 55%;
-   }
-
-}
-
 @media (max-width:768px){
 
    .pets-preview .preview img{
@@ -153,10 +145,6 @@ body{
 
 }
 
-@media (max-width:450px){
-
-   html{
-      font-size: 50%;
-   }
-
+.navbarteste{
+   font-size: 200%;
 }
