--- a/src/css/scannerstyle.css
+++ b/src/css/scannerstyle.css
@@ -1,21 +1,87 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap%27');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'poppins';
+}
 html, body {
     margin: 0;
     padding: 0;
 }
-.content {
-    text-align: center;
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    background: url('/Cotico/images/image0_1.png')no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.formulario{
+    position: relative;
+    width: 450px; 
+    height: 700px;
+    background: rgba(66, 103, 62, 0.589);
+    border: 2px solid rgba(44, 43, 43, 0.152);
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #img {
-    max-width: 200px;
-    margin: 50px 0;
+    width: 300px;
+    height: 400px;
+    align-items: center;
+    left: 72px;
+    top: 90px;
+    position: fixed;
 }
 .form input {
-    height: 30px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
-.form button {
+.input-div input{
     height: 36px;
     padding: 0 10px;
     border: none;
-    background: grey;
     color: white;
+    justify-content: center;
+    align-items: center;
+}
+p{
+    color: #fff;
+    font-size: 2em;
+    text-align: center;
+    position: fixed;
+    left: 130px;
+    top: 500px;
+}
+h2{
+    font-size: 27px;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    font-family: poppins;
+    top: 10px;
+    left: 18px;
+    position: fixed;
+}
+
+label{
+    color: #fff;
+    height: 100px;
+    width: 100px;
+    font-size: 20px;
+    display: flex;
+    top: 570px;
+    left: 175px;
+    position: fixed;
+}
+
+input[type="file"]{
+    display: none;
 }
