--- a/src/css/petsstyle.css
+++ b/src/css/petsstyle.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
-   font-family: 'Nunito', sans-serif;
+   font-family: 'poppins';
    margin:0; padding:0;
    box-sizing: border-box;
    outline: none; border:none;
@@ -11,18 +11,17 @@
 }
 
 html{
-   font-size: 62.5%;
    overflow-x: hidden;
 }
 
 body{
-   background: #eee;
+   background: rgba(20, 20, 20, 1);
 }
 
 .container{
    max-width: 1200px;
-   margin:0 auto;
-   padding:3rem 2rem;
+   margin: 0 auto;
+   padding: 2rem 0rem;
 }
 
 .container .title{
@@ -40,18 +39,16 @@ body{
 }
 
 .container .pets-container .pet{
+   align-items: center;
+   justify-content: center;
+   border-radius: 20px;
    text-align: center;
    padding:3rem 2rem;
-   background: #fff;
+   background: rgba(66, 103, 62, 0.589);
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-   outline: .1rem solid #ccc;
-   outline-offset: -1.5rem;
+   border: 4px solid rgba(0, 0, 0, 0.5);
+   border-radius: 20px;
    cursor: pointer;
-}
-
-.container .pets-container .pet:hover{
-   outline: .2rem solid #222;
-   outline-offset: 0;
 }
 
 .container .pets-container .pet img{
@@ -69,12 +66,25 @@ body{
 }
 
 .container .pets-container .pet:hover h3{
-   color:#27ae60;
+   color:#000000;
 }
 
 .container .pets-container .pet .raridade{
    font-size: 2rem;
    color:#444;
+   font-weight: bold;
+}
+
+.container .pets-container .pet .raridade1{
+   font-size: 2rem;
+   color:#11e61c;
+   font-weight: bold;
+}
+
+.container .pets-container .pet .raridade2{
+   font-size: 2rem;
+   color:#052de0;
+   font-weight: bold;
 }
 
 .pets-preview{
@@ -92,7 +102,7 @@ body{
    display: none;
    padding:2rem;
    text-align: center;
-   background: #fff;
+   background: rgb(66, 103, 62);
    position: relative;
    margin:2rem;
    width: 40rem;
