--- a/src/css/scannerstyle.css
+++ b/src/css/scannerstyle.css
@@ -21,27 +21,24 @@ section{
 }
 .formulario{
     position: relative;
-    width: 450px; 
-    height: 700px;
+    width: 90vw; 
+    max-width: 450px;
+    height: 80vh;
     background: rgba(66, 103, 62, 0.589);
     border: 2px solid rgba(44, 43, 43, 0.152);
     border-radius: 10px;
     backdrop-filter: blur(5px);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 #img {
-    width: 300px;
-    height: 400px;
-    align-items: center;
-    left: 72px;
-    top: 90px;
-    position: fixed;
+    width: 70%;
+    max-width: 300px;
+    margin: 20px 0;
 }
 .form input {
-    justify-content: center;
-    align-items: center;
     text-align: center;
 }
 .input-div input{
@@ -49,39 +46,39 @@ section{
     padding: 0 10px;
     border: none;
     color: white;
-    justify-content: center;
-    align-items: center;
 }
 p{
     color: #fff;
-    font-size: 2em;
+    font-size: 1.5rem;
     text-align: center;
-    position: fixed;
-    left: 130px;
-    top: 500px;
+    margin: 20px 0;
 }
 h2{
-    font-size: 27px;
+    font-size: 2rem;
     color: #fff;
     text-align: center;
     padding: 20px;
-    font-family: poppins;
-    top: 10px;
-    left: 18px;
-    position: fixed;
 }
-
 label{
     color: #fff;
-    height: 100px;
-    width: 100px;
-    font-size: 20px;
+    font-size: 1.5rem;
     display: flex;
-    top: 570px;
-    left: 175px;
-    position: fixed;
+    margin: 20px 0;
 }
 
 input[type="file"]{
     display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .formulario {
+    height: 90vh;
+  }
+  #img {
+    width: 50%;
+    max-width: 250px;
+  }
+  p, label {
+    font-size: 1rem;
+  }
 }
