--- a/src/css/loginstyle.css
+++ b/src/css/loginstyle.css
@@ -18,7 +18,7 @@ section{
     position: relative;
     width: 400px;
     height: 440px;
-    background: rgba(66, 103, 62, 0.589);
+    background: transparent;
     border: 3px solid rgba(255,255,255,0.5);
     border-radius: 20px;
     backdrop-filter: blur(15px);
