--- a/src/css/mapastyle.css
+++ b/src/css/mapastyle.css
@@ -6,9 +6,22 @@ section {
     align-items: center;
     min-height: 100vh;
     width: 100%;
+    background-color: rgb(235, 235, 235);
+    position: relative;
     background: url('./images/coticoamasso.jpg') no-repeat;
     background-position: center;
     background-size: cover;
+}
+.banner{
+    position: absolute;
+    height: 20%;
+    width: 100%;
+    top: 0;
+    background: rgb(235,235,235);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.082) 0%, rgba(0, 0, 0, 0.452) 100%);
+
+    display: grid;
+    place-items: center;
 }
 
 .formulario {
@@ -17,7 +30,6 @@ section {
     max-width: 500px;
     height: auto;
     background: transparent;
-    background-color: rgba(66, 103, 62, 0.589);
     border: 2px solid rgba(44, 43, 43, 0.152);
     border-radius: 20px;
     backdrop-filter: blur(5px);
@@ -29,12 +41,20 @@ section {
     padding: 20px;
 }
 
-h2 {
+.title {
+    font-family: 'poppins';
     font-size: 2.5em;
     color: #fff;
-    text-align: center;
-    padding: 20px;
-    font-family: poppins;
+    font-weight: 600;
+}
+
+.mapa {
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.mapa *{
+    border-radius: 20px;
 }
 
 @media only screen and (max-width: 768px) {
