--- a/src/css/cadastrostyle.css
+++ b/src/css/cadastrostyle.css
@@ -10,7 +10,7 @@ section{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url('./images/coticoamasso.jpg')no-repeat;
+    background: url('./images/coticoFundo.png')no-repeat;
     background-position: center;
     background-size: cover;
 }
@@ -18,7 +18,7 @@ section{
     position: relative;
     width: 400px;
     height: 530px;
-    background: transparent;
+    background: rgba(48, 128, 26, 0.438);
     border: 3px solid rgba(255,255,255,0.5);
     border-radius: 20px;
     backdrop-filter: blur(15px);
