--- a/src/css/petsstyle.css
+++ b/src/css/petsstyle.css
@@ -11,12 +11,16 @@
 }
 
 html{
-   font-size: 80%;
    overflow-x: hidden;
 }
 
 body{
-   background: rgba(20, 20, 20, 1);
+   background: rgba(201, 197, 197, 0.709);
+}
+
+h3{
+   font-family: 'poppins';
+   font-weight: 700;
 }
 
 .container{
@@ -27,7 +31,7 @@ body{
 
 .container .title{
    font-size: 3.5rem;
-   color:#444;
+   color:#000000;
    margin-bottom: 3rem;
    text-transform: uppercase;
    text-align: center;
@@ -35,7 +39,7 @@ body{
 
 .container .pets-container{
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
    gap:2rem;
 }
 
@@ -45,7 +49,7 @@ body{
    border-radius: 20px;
    text-align: center;
    padding:3rem 2rem;
-   background: rgba(66, 103, 62, 0.589);
+   background: rgba(248, 226, 193, 0.818);
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
    border: 4px solid rgba(0, 0, 0, 0.5);
    border-radius: 20px;
@@ -63,7 +67,7 @@ body{
 .container .pets-container .pet h3{
    padding:.5rem 0;
    font-size: 2rem;
-   color:#444;
+   color:#000000;
 }
 
 .container .pets-container .pet:hover h3{
@@ -115,7 +119,8 @@ body{
 }
 
 .pets-preview .preview img{
-   height: 30rem;
+   max-height: 300px;
+   width: 260px;
 }
 
 .pets-preview .preview .fa-times{
