--- a/src/css/scannerstyle.css
+++ b/src/css/scannerstyle.css
@@ -9,22 +9,33 @@ html, body {
     margin: 0;
     padding: 0;
 }
+.banner{
+    position: absolute;
+    height: 15%;
+    width: 100%;
+    top: 0;
+    background: rgb(235,235,235);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.019) 0%, rgba(0, 0, 0, 0.504) 100%);
+    display: grid;
+    place-items: center;
+}
 section{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url('./images/coticoamasso.jpg')no-repeat;
+    background: url('./images/coticoFundo.png')no-repeat;
     background-position: center;
     background-size: cover;
 }
+
 .form-value{
     position: relative;
     width: 90vw; 
     max-width: 450px;
-    height: 80vh;
-    background: transparent;
+    height: 75vh;
+    background: rgba(255, 255, 255, 0.14);
     border: 2px solid rgba(44, 43, 43, 0.152);
     border-radius: 10px;
     backdrop-filter: blur(5px);
@@ -35,8 +46,9 @@ section{
     padding: 10%;
 }
 #img {
-    width: 100%;
-    /* max-width: 300px; */
+    border: 8px solid #fff;
+    width: 280px;
+    height: 400px;
 }
 .camera{
     width: 50%; 
@@ -55,15 +67,14 @@ section{
     font-size: 1.5rem;
 }
 .title{
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: #fff;
     text-align: center;
-    font-weight: 700;
-    padding: 0 20px
+    font-weight: 600;
 }
 label{
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
