--- a/navbar/navstyle.css
+++ b/navbar/navstyle.css
@@ -12,7 +12,7 @@
   --title-color: hsl(var(--hue), 12%, 15%);
   --text-color: hsl(var(--hue), 8%, 35%);
   --body-color: hsl(var(--hue), 100%, 99%);
-  --container-color: #FFF;
+  --container-color: rgb(255, 255, 255);
 
   /*========== Font and typography ==========*/
   --body-font: 'Open Sans', sans-serif;
