--- a/src/css/petsstyle.css
+++ b/src/css/petsstyle.css
@@ -15,7 +15,8 @@ html{
 }
 
 body{
-   background: rgba(201, 197, 197, 0.709);
+   background: url('./images/backgroundPets.png') no-repeat;
+   background-attachment: fixed;
 }
 
 h3{
@@ -31,7 +32,7 @@ h3{
 
 .container .title{
    font-size: 3.5rem;
-   color:#000000;
+   color:#363636;
    margin-bottom: 3rem;
    text-transform: uppercase;
    text-align: center;
@@ -49,7 +50,7 @@ h3{
    border-radius: 20px;
    text-align: center;
    padding:3rem 2rem;
-   background: rgba(248, 226, 193, 0.818);
+   background: rgba(235, 235, 235, 0.8);
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
    border: 4px solid rgba(0, 0, 0, 0.5);
    border-radius: 20px;
