--- a/src/css/lixeirastyle.css
+++ b/src/css/lixeirastyle.css
@@ -125,3 +125,7 @@ button[type="button"]{
     margin-top: 10px;
     transition: .3s linear;
 }
+
+#html5-qrcode-anchor-scan-type-change{
+    visibility: hidden;
+}
