--- a/src/css/petsstyle.css
+++ b/src/css/petsstyle.css
@@ -93,6 +93,12 @@ h3{
    font-weight: bold;
 }
 
+.container .pets-container .pet .raridade3{
+   font-size: 2rem;
+   color:#e2d300;
+   font-weight: bold;
+}
+
 .pets-preview{
    position: fixed;
    top:0; left:0;
